# DRAKE---

./: .gitignore  README.md  ir.py  profiler.py  pyproject.toml  requirements.txt  runtime.py
.github/workflows/: ci.yml
codegen/: dispatch_jit.py  fused_ops.py
docs/: ARCHITECTURE.md
drake/: ir.py
drake/codegen/: fused_ops.py
drake/passes/: fusion.py  specialize.py
examples/: decode_demo.py
passes/: cse.py  dce.py  fusion.py  specialize.py  verify.py
tests/: test_cse.py  test_dce.py  test_dispatch_jit.py  test_fusion.py  test_ir.py  test_runtime.py  test_specialize.py  test_to_dot.py  test_verify.py
