[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drake"
version = "0.1.0"
description = "Dynamic Runtime Adaptive Kernel Engine — shape-specialized fusion + LLVM-JIT dispatch for LLM decode inference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "llvmlite>=0.42",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6", "mypy>=1.10"]

[tool.setuptools]
py-modules = ["ir", "profiler", "runtime"]

[tool.setuptools.packages.find]
include = ["passes*", "codegen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
